CHATS_SIT/force-app/main/default/objects/batchsit_t_fcompsn_indiv_eligty__x.object
<CustomObject>
    <description>batchsit$t_fcompsn_indiv_eligty</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_fcompsn_indiv_eligty</externalName>
    <fields>
        <fullName>cde_reason_ovrd__c</fullName>
        <description>cde_reason_ovrd</description>
        <externalDeveloperName>cde_reason_ovrd</externalDeveloperName>
        <label>Override Reason</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_case_indiv__c</fullName>
        <description>idn_case_indiv</description>
        <externalDeveloperName>idn_case_indiv</externalDeveloperName>
        <label>Case Individual ID</label>
        <length>50</length>
        <referenceTargetField>T_SBSD_CASE_INDIV__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SBSD_CASE_INDIV__c</referenceTo>
        <relationshipLabel>Individual Eligibility</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn__c</fullName>
        <description>idn_eligty_fcompsn</description>
        <externalDeveloperName>idn_eligty_fcompsn</externalDeveloperName>
        <label>Household Eligibility ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_fcompsn_eligty__x</referenceTo>
        <relationshipLabel>Individual Eligibility</relationshipLabel>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_eligty_fcompsn_advrs__c</fullName>
        <description>idn_eligty_fcompsn_advrs</description>
        <externalDeveloperName>idn_eligty_fcompsn_advrs</externalDeveloperName>
        <label>Adverse Household Eligibility ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn__c</fullName>
        <description>idn_indiv_fcompsn</description>
        <externalDeveloperName>idn_indiv_fcompsn</externalDeveloperName>
        <label>Individual Eligibility ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_fcompsn_advrs__c</fullName>
        <description>idn_indiv_fcompsn_advrs</description>
        <externalDeveloperName>idn_indiv_fcompsn_advrs</externalDeveloperName>
        <label>Adverse Individual Eligibility ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lastmodifiedbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lastmodifiedbyid</description>
        <externalDeveloperName>lastmodifiedbyid</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_fcompsn_indiv_eligty1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>lastmodifieddate__c</fullName>
        <description>lastmodifieddate</description>
        <externalDeveloperName>lastmodifieddate</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>txt_cmt_ovrd__c</fullName>
        <description>txt_cmt_ovrd</description>
        <externalDeveloperName>txt_cmt_ovrd</externalDeveloperName>
        <label>Override Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_values_comptd_xml__c</fullName>
        <description>txt_values_comptd_xml</description>
        <externalDeveloperName>txt_values_comptd_xml</externalDeveloperName>
        <label>XML Computed Values</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Individual Eligibility</label>
    <pluralLabel>Individual Eligibility</pluralLabel>
</CustomObject>